WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266629
[GTK][WPE] Fallback to timer based vblank monitor if drmWaitVBlank fails
https://bugs.webkit.org/show_bug.cgi?id=266629
Summary
[GTK][WPE] Fallback to timer based vblank monitor if drmWaitVBlank fails
Carlos Garcia Campos
Reported
2023-12-19 05:27:39 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2023-12-19 05:28:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22021
EWS
Comment 2
2023-12-20 00:39:17 PST
Committed
272328@main
(910ef55e5f78): <
https://commits.webkit.org/272328@main
> Reviewed commits have been landed. Closing PR #22021 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug