[GTK][WPE] Fallback to timer based vblank monitor if drmWaitVBlank fails https://bugs.webkit.org/show_bug.cgi?id=266629

Reviewed by Alejandro G. Castro.

* Source/WebKit/UIProcess/glib/DisplayVBlankMonitorDRM.cpp:
(WebKit::crtcBitmaskForIndex):
(WebKit::DisplayVBlankMonitorDRM::create):
(WebKit::DisplayVBlankMonitorDRM::DisplayVBlankMonitorDRM):
* Source/WebKit/UIProcess/glib/DisplayVBlankMonitorDRM.h:

Canonical link: https://commits.webkit.org/272328@main